# aioz-w3s-s3-examples

./: LICENSE  README.md
cli/: README.md
example-apps/file-manager/: .env.example  README.md  pyproject.toml
example-apps/file-manager/file_manager/: main.py
go/: go.mod  main.go
javascript/: s3_createbucket.js  s3_listbuckets.js  s3_listojects.js
javascript-v2/: package.json  s3_createbucket.js  s3_deletebucket.js  s3_listbuckets.js  s3_listojects.js  s3_upload.js
javascript-v3/: copyObject.js  createBucket.js  deleteBucket.js  deleteMultiObjects.js  deleteObject.js  getObject.js  listBuckets.js  listObjects.js  package-lock.json  upload.js
javascript_v3/: createBucket.js  getObject.js  listBuckets.js  listObjects.js  package.json  upload.js
minimal/: README.md
postman/: README.md
python/: copy_object.py  delete_bucket.py  delete_object.py  delete_objects.py  get_object.py  list_buckets.py  list_objects.py  pyproject.toml  s3_resource.py  upload.py
